# tails

./: .anjuta_sym_db.db  configure.ac  tails.cbp  tails.depend  tails.layout
.anjuta/session/: anjuta.session  dock-layout.xml
QExtPublic/: QWorkCards.cpp
QExtTailPromise/QJump/: QFlow.cpp
QExtTailSignal/: QExtTailBreakingNews.cpp
QExtTailTurn/: QExtAmbient.cpp
QExtTails/: QExtTailsAccounts.cpp  QExtTailsAnalysis.cpp  QExtTailsApis.cpp  QExtTailsApple.cpp  QExtTailsBase.cpp  QExtTailsBasic.cpp  QExtTailsCars.cpp  QExtTailsCheck.cpp  QExtTailsCheckTables.cpp  QExtTailsCheckWiki.cpp  QExtTailsClass.cpp  QExtTailsClick.cpp  QExtTailsCollect.cpp  QExtTailsCounts.cpp  QExtTailsCrews.cpp  QExtTailsDocs.cpp  QExtTailsEvent.cpp  QExtTailsFillCrews.cpp  QExtTailsHeaders.cpp  QExtTailsInterfaces.cpp  QExtTailsLearn.cpp  QExtTailsObject.cpp  QExtTailsPlums.cpp  QExtTailsPublic.cpp  QExtTailsTables.cpp  QExtTailsTopic.cpp  QExtTailsTypes.cpp  QTailsKits.cpp
QFreeBasic/QRicher/: QRicherWin.bas
QGetCurrentPos/: QCurrentPosHelp.cpp
QPerl/komodo/: security.pl
QPerl/komodo/QBuss/: QRecordAudioVideos.cpp
QSciAddText/: QAddText.cpp
src/: Makefile.am  lib.c  tails-0.1.pc.in  tails.h
wine/: package-lock.json  package.json
